--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "jest": "^22.4.3"
-  },
   "coverageThreshold": {
     "global": {
       "branches": 80,
@@ -20,6 +17,7 @@
     }
   },
   "dependencies": {
+    "jest": "^26.6.3",
     "node-fetch": "^2.1.2"
   },
   "jest": {
